--- a/course-nlp-master/0-course-logistics.ipynb
+++ b/course-nlp-master/0-course-logistics.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let me know how things are going. I've talked with your other professors, but I may not know everything you've seen/haven't seen."
+    "Let me know how things are going. I may not know everything you've seen/haven't seen."
    ]
   },
   {
@@ -32,35 +32,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Office hours**: Email me if you need to meet.  I will be around on Friday afternoons (although meeting with practicum students for part of that time).\n",
+    "My contact info: arles.rodriguez@konradlorenz.edu.co\n",
     "\n",
-    "My contact info: rachel@fast.ai\n",
+    "This course is a fork of the fast ai nlp course: https://github.com/fastai/course-nlp with some additional comments and tips I found useful when I studied it. We are covering even less topics than the original course (original course is 2 months length)-\n",
     "\n",
-    "Email me if you will need to miss class.\n",
-    "\n",
-    "Jupyter Notebooks will be available on Github at: https://github.com/fastai/course-nlp Please pull/download before class. Be sure to let me know **THIS WEEK** if you are having any problems running the notebooks from your own computer.  You may want to make a separate copy, because running Jupyter notebooks causes them to change, which can create github conflicts the next time you pull."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Grading Rubric**:\n",
-    "\n",
-    "| Assignment         | Percent |\n",
-    "|--------------------|:-------:|\n",
-    "| Homework           |   35%   |\n",
-    "| Writing assignment |   30%   |\n",
-    "| Final Exam         |   35%   |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Honor Code** \n",
-    "\n",
-    "No cheating nor plagiarism is allowed, please see below for more details."
+    "Code of the course with additional notes and comments is available at: https://github.com/arleserp/nlp-fork-fast.ai\n"
    ]
   },
   {
@@ -69,7 +45,7 @@
    "source": [
     "**On Laptops**\n",
     "\n",
-    "I ask you to be respectful of me and your classmates and to refrain from surfing the web or using social media (facebook, twitter, etc) or messaging programs during class. It is absolutely forbidden to use instant messaging programs, email, etc. during class lectures or quizzes."
+    "I ask you to be respectful of me and your classmates and to refrain from surfing the web or using social media (facebook, twitter, etc) or messaging programs during class. "
    ]
   },
   {
@@ -116,6 +92,8 @@
     "  - Language model\n",
     "  - Transfer learning\n",
     "  - Sentiment classification\n",
+    "\n",
+    "Original course additional covers following topics:\n",
     "\n",
     "6\\. Translation with RNNs\n",
     "  - Review Embeddings\n",
@@ -190,24 +168,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deadlines"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "| Assignment        | Dates    |\n",
-    "|-------------------|:--------:|\n",
-    "| Homeworks         |   TBA    |\n",
-    "| Writing           |   6/22   |\n",
-    "| Final Exam        |   6/27   |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Teaching"
    ]
   },
@@ -236,81 +196,6 @@
     "1. **doing** (coding and building)\n",
     "2. **explaining** what they've learned (by writing or helping others)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
-   "source": [
-    "## USF Policies"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "**Academic Integrity** \n",
-    "\n",
-    "USF upholds the standards of honesty and integrity from all members of the academic community. All students are expected to know and adhere to the University’s Honor Code. You can find the full text of the [code online](www.usfca.edu/academic_integrity). The policy covers:\n",
-    "- Plagiarism: intentionally or unintentionally representing the words or ideas of another person as your own; failure to properly cite references; manufacturing references.\n",
-    "- Working with another person when independent work is required.\n",
-    "- Submission of the same paper in more than one course without the specific permission of each instructor.\n",
-    "- Submitting a paper written (entirely or even a small part) by another person or obtained from the internet.\n",
-    "- Plagiarism is plagiarism: it does not matter if the source being copied is on the Internet, from a book or textbook, or from quizzes or problem sets written up by other students.\n",
-    "- The penalties for violation of the policy may include a failing grade on the assignment, a failing grade in the course, and/or a referral to the Academic Integrity Committee."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "**Students with Disabilities**\n",
-    "\n",
-    "If you are a student with a disability or disabling condition, or if you think you may have a disability, please contact USF Student Disability Services (SDS) at 415 422-2613 within the first week of class, or immediately upon onset of disability, to speak with a disability specialist. If you are determined eligible for reasonable accommodations, please meet with your disability specialist so they can arrange to have your accommodation letter sent to me, and we will discuss your needs for this course. For more information, please visit [this website]( http://www.usfca.edu/sds) or call (415) 422-2613."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "**Behavioral Expectations**\n",
-    "\n",
-    "All students are expected to behave in accordance with the [Student Conduct Code and other University policies](https://myusf.usfca.edu/fogcutter). Open discussion and disagreement is encouraged when done respectfully and in the spirit of academic discourse. There are also a variety of behaviors that, while not against a specific University policy, may create disruption in this course. Students whose behavior is disruptive or who fail to comply with the instructor may be dismissed from the class for the remainder of the class period and may need to meet with the instructor or Dean prior to returning to the next class period. If necessary, referrals may also be made to the Student Conduct process for violations of the Student Conduct Code."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "**Counseling and Psychological Services**\n",
-    "\n",
-    "Our diverse staff offers brief individual, couple, and group counseling to student members of our community. CAPS services are confidential and free of charge. Call 415-422-6352 for an initial consultation appointment. Having a crisis at 3 AM? We are still here for you. Telephone consultation through CAPS After Hours is available between the hours of 5:00 PM to 8:30 AM; call the above number and press 2."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "**Confidentiality, Mandatory Reporting, and Sexual Assault**\n",
-    "\n",
-    "As an instructor, one of my responsibilities is to help create a safe learning environment on our campus. I also have a mandatory reporting responsibility related to my role as a faculty member. I am required to share information regarding sexual misconduct or information about a crime that may have occurred on USFs campus with the University. Here are other resources:\n",
-    "\n",
-    "- To report any sexual misconduct, students may visit Anna Bartkowski (UC 5th floor) or see many other options by visiting [this website](https://myusf.usfca.edu/title-IX)\n",
-    "- Students may speak to someone confidentially, or report a sexual assault confidentially by contacting Counseling and Psychological Services at 415-422-6352\n",
-    "- To find out more about reporting a sexual assault at USF, visit [USF’s Callisto website](https://usfca.callistocampus.org/)\n",
-    "- For an off-campus resource, contact [San Francisco Women Against Rape](http://www.sfwar.org/about.html) 415-647-7273"
-   ]
   }
  ],
  "metadata": {
@@ -329,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
