--- a/course-nlp-master/0-course-logistics.ipynb
+++ b/course-nlp-master/0-course-logistics.ipynb
@@ -32,9 +32,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "My contact info: arles.rodriguez@konradlorenz.edu.co\n",
+    "My contact info: arles.rodriguez@konradlorenz.edu.co more about me at: https://arleserp.github.io/\n",
     "\n",
-    "This course is a fork of the fast ai nlp course: https://github.com/fastai/course-nlp with some additional comments and tips I found useful when I studied it. We are covering even less topics than the original course (original course is 2 months length)-\n",
+    "This course is a fork of the fast ai nlp course: https://github.com/fastai/course-nlp with some additional comments and tips I found useful when I studied it. We are covering even less topics than the original course (original course is 2 months length). \n",
     "\n",
     "Code of the course with additional notes and comments is available at: https://github.com/arleserp/nlp-fork-fast.ai\n"
    ]
