Adjusted class 1 of NLP course

--- a/course-nlp-master/1-what-is-nlp.ipynb
+++ b/course-nlp-master/1-what-is-nlp.ipynb
@@ -385,6 +385,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- [A Sentiment Analysis Model of Spanish Tweets. Case Study: Colombia 2014 Presidential Election ](http://bdigital.unal.edu.co/52257/)\n",
+    "\n",
+    "<img src=\"images/jhonthesis.png\" alt=\"\" style=\"width: 65%\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
