Updated resource of topic modelling to include more samples and links

--- a/course-nlp-master/2-svd-nmf-topic-modeling.ipynb
+++ b/course-nlp-master/2-svd-nmf-topic-modeling.ipynb
@@ -42,6 +42,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "LSA assumes that words that are close in meaning will occur in similar pieces of text (the distributional hypothesis). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Motivation"
    ]
   },
@@ -72,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- [Data source](http://scikit-learn.org/stable/datasets/twenty_newsgroups.html): Newsgroups are discussion groups on Usenet, which was popular in the 80s and 90s before the web really took off.  This dataset includes 18,000 newsgroups posts with 20 topics.\n",
+    "- [Data source](https://scikit-learn.org/stable/datasets/#the-20-newsgroups-text-dataset): Newsgroups are discussion groups on Usenet, which was popular in the 80s and 90s before the web really took off.  This dataset includes 18,000 newsgroups posts with 20 topics.\n",
     "- [Chris Manning's book chapter](https://nlp.stanford.edu/IR-book/pdf/18lsi.pdf) on matrix factorization and LSI \n",
     "- Scikit learn [truncated SVD LSI details](http://scikit-learn.org/stable/modules/decomposition.html#lsa)\n",
     "\n",
@@ -131,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,26 +146,6 @@
     "remove = ('headers', 'footers', 'quotes')\n",
     "newsgroups_train = fetch_20newsgroups(subset='train', categories=categories, remove=remove)\n",
     "newsgroups_test = fetch_20newsgroups(subset='test', categories=categories, remove=remove)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((2034,), (2034,))"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "newsgroups_train.filenames.shape, newsgroups_train.target.shape"
    ]
   },
   {
@@ -170,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,6 +178,7 @@
       "Is the .CEL file format available from somewhere?\n",
       "\n",
       "Rych\n",
+      "------------------\n",
       "\n",
       "\n",
       "Seems to be, barring evidence to the contrary, that Koresh was simply\n",
@@ -201,6 +189,7 @@
       "\n",
       "Nope - fruitcakes like Koresh have been demonstrating such evil corruption\n",
       "for centuries.\n",
+      "------------------\n",
       "\n",
       " >In article <1993Apr19.020359.26996@sq.sq.com>, msb@sq.sq.com (Mark Brader) \n",
       "\n",
@@ -216,7 +205,27 @@
     }
    ],
    "source": [
-    "print(\"\\n\".join(newsgroups_train.data[:3]))"
+    "print(\"\\n------------------\\n\".join(newsgroups_train.data[:3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((2034,), (2034,))"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newsgroups_train.filenames.shape, newsgroups_train.target.shape"
    ]
   },
   {
@@ -275,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +353,7 @@
        " 'amoungst']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +412,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     /home/racheltho/nltk_data...\n",
+      "[nltk_data]     C:\\Users\\Arles\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     },
@@ -413,7 +422,7 @@
        "True"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +471,7 @@
        "['foot', 'foot', 'foot', 'footing']"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +491,7 @@
        "['feet', 'foot', 'foot', 'foot']"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,17 +573,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from spacy.lemmatizer import Lemmatizer\n",
-    "lemmatizer = Lemmatizer()"
+    "from spacy.lookups import Lookups\n",
+    "\n",
+    "lookups = Lookups()\n",
+    "lemmatizer = Lemmatizer(lookups)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -583,12 +595,13 @@
        "['feet', 'foot', 'foots', 'footing']"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "word_list = ['feet', 'foot', 'foots', 'footing']\n",
     "[lemmatizer.lookup(word) for word in word_list]"
    ]
   },
@@ -608,7 +621,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spaCy Version: 2.1.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('spaCy Version: %s' % (spacy.__version__))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,13 +647,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['a',\n",
+       "[\"'d\",\n",
+       " \"'ll\",\n",
+       " \"'m\",\n",
+       " \"'re\",\n",
+       " \"'s\",\n",
+       " \"'ve\",\n",
+       " 'a',\n",
        " 'about',\n",
        " 'above',\n",
        " 'across',\n",
@@ -636,22 +672,56 @@
        " 'alone',\n",
        " 'along',\n",
        " 'already',\n",
-       " 'also',\n",
-       " 'although',\n",
-       " 'always',\n",
-       " 'am',\n",
-       " 'among',\n",
-       " 'amongst',\n",
-       " 'amount']"
+       " 'also']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sorted(list(nlp.Defaults.stop_words))[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(nlp.Defaults.stop_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "frozenset"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(stop_words.ENGLISH_STOP_WORDS)"
    ]
   },
   {
@@ -663,33 +733,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ca',\n",
-       " 'did',\n",
-       " 'does',\n",
-       " 'doing',\n",
-       " 'just',\n",
-       " 'make',\n",
-       " 'quite',\n",
-       " 'really',\n",
-       " 'regarding',\n",
-       " 'say',\n",
-       " 'unless',\n",
-       " 'used',\n",
-       " 'using',\n",
-       " 'various'}"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Exercise:\n"
    ]
@@ -705,48 +751,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {
     "hidden": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "frozenset({'amoungst',\n",
-       "           'bill',\n",
-       "           'cant',\n",
-       "           'co',\n",
-       "           'con',\n",
-       "           'couldnt',\n",
-       "           'cry',\n",
-       "           'de',\n",
-       "           'describe',\n",
-       "           'detail',\n",
-       "           'eg',\n",
-       "           'etc',\n",
-       "           'fill',\n",
-       "           'find',\n",
-       "           'fire',\n",
-       "           'found',\n",
-       "           'hasnt',\n",
-       "           'ie',\n",
-       "           'inc',\n",
-       "           'interest',\n",
-       "           'ltd',\n",
-       "           'mill',\n",
-       "           'sincere',\n",
-       "           'system',\n",
-       "           'thick',\n",
-       "           'thin',\n",
-       "           'un'})"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Exercise:\n"
    ]
@@ -814,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +875,7 @@
        "(2034, 26576)"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -897,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +924,7 @@
        "(26576,)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -938,13 +947,20 @@
        "       'counselees', 'counselor', 'count'], dtype='<U80')"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "vocab[7000:7020]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Excel File With Document and Frequencies](britlit.xlsx)"
    ]
   },
   {
