Updates to the Natural Language Processing Course

--- a/course-nlp-master/2-svd-nmf-topic-modeling.ipynb
+++ b/course-nlp-master/2-svd-nmf-topic-modeling.ipynb
@@ -309,6 +309,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"images/map-popular-word.png\" alt=\"The\" style=\"width: 80%\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "From [Intro to Information Retrieval](https://nlp.stanford.edu/IR-book/html/htmledition/dropping-common-terms-stop-words-1.html):\n",
     "\n",
     "*Some extremely common words which would appear to be of little value in helping select documents matching a user need are excluded from the vocabulary entirely. These words are called stop words.*\n",
@@ -1117,20 +1124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Exercise: confrim that U, s, Vh is a decomposition of `vectors`\n"
    ]
@@ -1481,6 +1477,26 @@
    "source": [
     "vectorizer_tfidf = TfidfVectorizer(stop_words='english')\n",
     "vectors_tfidf = vectorizer_tfidf.fit_transform(newsgroups_train.data) # (documents, vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2034, 26576)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectors_tfidf.shape"
    ]
   },
   {
