--- a/course-nlp-master/2b-odds-and-ends.ipynb
+++ b/course-nlp-master/2b-odds-and-ends.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -227,10 +227,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7fbdfc6e0358>"
+       "<IPython.lib.display.YouTubeVideo at 0x14e2f1b6668>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,9 +268,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -284,9 +283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -296,9 +294,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -310,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {
     "hidden": true
    },
@@ -318,10 +315,10 @@
     {
      "data": {
       "text/plain": [
-       "27"
+       "0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
