--- a/course-nlp-master/3-logreg-nb-imdb.ipynb
+++ b/course-nlp-master/3-logreg-nb-imdb.ipynb
@@ -3831,18 +3831,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['negative', 'positive']"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'movie_reviews' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-c980617142cc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmovie_reviews\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclasses\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'movie_reviews' is not defined"
+     ]
     }
    ],
    "source": [
@@ -5197,7 +5198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5206,7 +5207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5217,7 +5218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5226,7 +5227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5275,7 +5276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5543,9 +5544,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_ngram_doc_matrix' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-0e7c5f0eeaa3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mscipy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msparse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave_npz\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"train_ngram_matrix.npz\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_ngram_doc_matrix\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'train_ngram_doc_matrix' is not defined"
+     ]
+    }
+   ],
    "source": [
     "scipy.sparse.save_npz(\"train_ngram_matrix.npz\", train_ngram_doc_matrix)"
    ]
@@ -5583,7 +5596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "hidden": true
    },
@@ -5595,7 +5608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "hidden": true
    },
@@ -5617,7 +5630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5627,7 +5640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5637,7 +5650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -5647,7 +5660,7 @@
        "\twith 678885 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5658,16 +5671,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "k=260374"
+    "k=260428"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5677,7 +5690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5686,7 +5699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7288,78 +7301,6 @@
    "source": [
     "preds = m2.predict(valid_ngram_doc_matrix)\n",
     "(preds.T==valid_labels).mean()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Log-count ratio"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here is the $\\text{log-count ratio}$ `r`.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 422,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x=train_ngram_doc_matrix.sign()\n",
-    "val_x=valid_ngram_doc_matrix.sign()\n",
-    "y=movie_reviews.train.y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 423,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "positive = y.c2i['positive']\n",
-    "negative = y.c2i['negative']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 424,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "k=260428"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 425,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pos = (y.items == positive)[:k]\n",
-    "neg = (y.items == negative)[:k]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 426,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xx = x[:k]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 427,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "valid_labels = [o == positive for o in movie_reviews.valid.y.items]"
    ]
   },
   {
