Changes to the nlp course

--- a/course-nlp-master/2b-odds-and-ends.ipynb
+++ b/course-nlp-master/2b-odds-and-ends.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -227,10 +227,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x14e2f1b6668>"
+       "<IPython.lib.display.YouTubeVideo at 0x1df29899c88>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
