Addition of Last Class of NLP especial course

--- a/course-nlp-master/3b-more-details.ipynb
+++ b/course-nlp-master/3b-more-details.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -128,10 +128,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x23f70453dd8>"
+       "<IPython.lib.display.YouTubeVideo at 0x14cc66cd0b8>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
