--- a/course-nlp-master/5-nn-imdb-2911.ipynb
+++ b/course-nlp-master/5-nn-imdb-2911.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        " WindowsPath('C:/Users/Arles/.fastai/data/imdb/unsup')]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1529,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 30,
    "metadata": {
     "hidden": true
    },
@@ -1549,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 16,
    "metadata": {
     "hidden": true
    },
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 17,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -1572,8 +1572,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I hated this movie as a novel , and about the extra character of film in this film , saying that it was \" all about the film , what you are going to say to it . \" The film was also\n",
-      "I hated this movie . The film was released for a Chinese public school ritual in 1997 , and was also featured in the 2005 film The Queen of Christianity . It also appeared on Character\n"
+      "The color of the sky is a label of blue , with the red , blue and green stars being the colour of the sun . These colours appear as pink , though most colours are black . The stars are depicted as stars\n",
+      "The color of the sky is a reference at the time of the Tonight Show with Conan o ' Brien . Several Americans , such as Paul Brown and Paul Howard , have shown a different\n"
      ]
     }
    ],
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 18,
    "metadata": {
     "hidden": true
    },
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 19,
    "metadata": {
     "hidden": true
    },
@@ -1605,8 +1605,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I hated this movie of the same name , or Loving You , for the latter 's abdication . It was directed by George Lucas Thomas , who\n",
-      "I hated this movie for a short time . In 1998 , the film 's director David Bowers was a fan of the film , and wrote that it was\n"
+      "I hated this movie . The film Die Another Day ( 2001 ) was a horror film , and was a box office success . It was released on\n",
+      "I hated this movie , and said that the film had been \" nothing more than a horror movie and that [ a ] lot of people and people got to see it .\n"
      ]
     }
    ],
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 20,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1626,10 +1626,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I hated this movie for its anti - cult and anti - abortion theme . It was used to promote the United States ' anti - feminist movement , The\n",
-      "I hated this movie = \n",
-      " \n",
-      "  The movie is an American horror film , featuring a fantasy story about a mysterious child . The film follows the portrayal of a couple\n"
+      "I hated this movie , and called it \" Fluttery 's Dream \" . He told a group of fans at the Royal Victorian Society of Shakespeare\n",
+      "I hated this movie for a majority of its career , from the point of view of the film 's Disguised Agent to the Company in the World ( 1995\n"
      ]
     }
    ],
@@ -1639,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 21,
    "metadata": {
     "hidden": true
    },
@@ -1659,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 22,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1669,8 +1667,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I hated this movie by John Lennon and Paul mccartney . He said , \" i ' m not sure what i ' m doing . i ' m not\n",
-      "I hated this movie by John Lennon , and he said , \" It 's a great film . It 's a great film . It 's a great\n"
+      "I hated this movie by John Lennon , and he said , \" i ' m not sure what i ' m doing . It 's not a bad thing .\n",
+      "I hated this movie by John Lennon , and he said he was \" very disappointed \" with the film . He said that he was \" very disappointed \" with\n"
      ]
     }
    ],
@@ -1949,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 23,
    "metadata": {
     "hidden": true
    },
@@ -1969,7 +1967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 27,
    "metadata": {
     "hidden": true
    },
@@ -1980,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 28,
    "metadata": {
     "hidden": true
    },
@@ -1991,7 +1989,7 @@
        "False"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2003,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 31,
    "metadata": {
     "hidden": true
    },
@@ -2014,7 +2012,7 @@
        "False"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2043,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 32,
    "metadata": {
     "hidden": true
    },
@@ -2109,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 33,
    "metadata": {
     "hidden": true
    },
@@ -2122,7 +2120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 34,
    "metadata": {
     "hidden": true
    },
@@ -2131,8 +2129,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This movie was terrible . At first it was n't a film that had chemistry between Kevin Spacey and Fee Facts , but then i thought that was\n",
-      "This movie was not all that bad , but the fact that it was made in Germany made it worse . It has a lot of bad acting but it 's\n"
+      "I hated this movie . It was very boring and boring . It was boring . i 'm not saying that i am a fan of Dark City , but i 'm always surprised that this movie had some good\n",
+      "I hated this movie . It was terrible . The acting was bad . The plot was n't original . \n",
+      " \n",
+      "  The movie was just a mess . The plot was stupid and the acting was horrible .\n"
      ]
     }
    ],
@@ -2171,6 +2171,33 @@
    },
    "source": [
     "<img src=\"images/husain-tweet.png\" alt=\"Roboflow\" style=\"width: 60%\"/>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://www.eltiempo.com/opinion/columnistas/moises-wasserman/la-psicologia-caotica-de-las-redes-columna-de-moises-wasserman-438484"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://pdos.csail.mit.edu/archive/scigen/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://www.fayerwayer.com/2014/12/marge-simpson-y-edna-krabapel-publicaron-un-paper/"
    ]
   },
   {
