Last sesion of the Natural Language Processing Course

--- a/course-nlp-master/5-nn-imdb-2911.ipynb
+++ b/course-nlp-master/5-nn-imdb-2911.ipynb
@@ -2174,30 +2174,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "https://www.eltiempo.com/opinion/columnistas/moises-wasserman/la-psicologia-caotica-de-las-redes-columna-de-moises-wasserman-438484"
+    "https://www.fayerwayer.com/2014/12/marge-simpson-y-edna-krabapel-publicaron-un-paper/\n",
+    "    \n",
+    "<img src=\"images/maggieklavados.png\" alt=\"MaggiePaper\" style=\"width: 60%\"/>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "https://pdos.csail.mit.edu/archive/scigen/"
+    "https://pdos.csail.mit.edu/archive/scigen/\n",
+    "\n",
+    "<img src=\"images/scigen.png\" alt=\"Scigen\" style=\"width: 60%\"/>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "https://www.fayerwayer.com/2014/12/marge-simpson-y-edna-krabapel-publicaron-un-paper/"
+    "https://www.eltiempo.com/opinion/columnistas/moises-wasserman/la-psicologia-caotica-de-las-redes-columna-de-moises-wasserman-438484\n",
+    "\n",
+    "<img src=\"images/wasserman.png\" alt=\"Wasserman\" style=\"width: 60%\"/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://arxiv.org/pdf/1907.03187.pdf\n",
+    "\n",
+    "<img src=\"images/haha.png\" alt=\"haha\" style=\"width: 60%\"/>"
    ]
   },
   {
